# RoadmapOs

./: .gitignore  docker-compose.yml  pom.xml
backend/: pom.xml
backend/src/main/java/com/midzuhara/roadmapos/: RoadmapOsApplication.java
backend/src/main/java/com/midzuhara/roadmapos/common/: ApiError.java
backend/src/main/java/com/midzuhara/roadmapos/common/exception/: GlobalExceptionHandler.java
backend/src/main/java/com/midzuhara/roadmapos/graph/controller/: GraphController.java  RoadmapController.java
backend/src/main/java/com/midzuhara/roadmapos/graph/dto/: BatchUpdatePositionRequest.java  CreateEdgeRequest.java  CreateNodeRequest.java  NodeDto.java  RoadmapResponseDto.java  (+1 more)
backend/src/main/resources/: application.yaml
backend/src/test/java/com/midzuhara/roadmapos/: RoadmapOsApplicationTests.java
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: CustomNode.tsx
frontend/src/pages/: Dashboard.tsx  Editor.tsx
frontend/src/types/: api.ts
src/main/java/com/midzuhara/roadmapos/graph/dto/: CreateRoadmapRequest.java  EdgeDto.java  UpdateNodeRequest.java  UpdateRoadmapRequest.java
src/main/java/com/midzuhara/roadmapos/graph/entity/: Edge.java  Node.java  Roadmap.java  Status.java
src/main/java/com/midzuhara/roadmapos/graph/mapper/: RoadmapMapper.java
src/main/java/com/midzuhara/roadmapos/graph/repository/: EdgeRepository.java  NodeRepository.java  RoadmapRepository.java
src/main/java/com/midzuhara/roadmapos/graph/service/: GraphService.java  RoadmapService.java
src/main/proto/: validator.proto
src/main/resources/: application.yaml
src/main/resources/db/migration/: V1__init_schema.sql
validator/: CMakeLists.txt  main.cpp
validator/protos/: validator.proto
(+20 files in other folders)
